[package]
name = "wepoll-sys"
version = "1.0.0"
authors = ["Yorick Peterse <yorickpeterse@gmail.com>"]
edition = "2018"
links = "wepoll"
build = "build.rs"
description = "Raw bindings to the wepoll library"
repository = "https://gitlab.com/yorickpeterse/wepoll-sys"
readme = "README.md"
license = "MPL-2.0"
keywords = ["wepoll", "poll", "windows", "epoll"]
categories = ["external-ffi-bindings", "os::windows-apis"]

[build-dependencies]
bindgen = "^0.49"
cc = "^1.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
features = []

[features]
compile-wepoll = []
default = ["compile-wepoll"]
